--- a/scss/public.scss
+++ b/scss/public.scss
@@ -2,11 +2,11 @@
 @import "bootstrap/bootstrap";
 
 $bg-color: #f8f8f8; // 背景色
-$main-color: #B9D08B; // 主色
+$main-color: #8eac53; // 主色
 $sec-color: #E5EDD4; // 淺色
 // $sec-color: #c5d9f9; 
 $link-color: #97684F; // read more
-$orange-color: #8EBFF0; // 橘色
+$orange-color: #5583b1; // 橘色
 
 * {
   &, &:after, &:before {
